# blind-whisperer

./: .gitignore  README.md
backend/: .env.example  pyproject.toml  requirements.txt
backend/app/: config.py  main.py
docs/: meta-glasses-simulation.md
frontend/: .env.example  capacitor.config.ts  index.html  package-lock.json  package.json  vite.config.ts
frontend/android/app/: build.gradle
frontend/android/app/src/main/java/com/blindwhisperer/app/: MainActivity.java
frontend/android/app/src/main/res/values/: strings.xml
frontend/ios/App/App/: Info.plist
frontend/ios/App/App.xcodeproj/: project.pbxproj
frontend/src/: App.tsx  styles.css  vite-env.d.ts
