[project]
name = "blind-whisperer-backend"
version = "0.1.0"
description = "Blind Whisperer FastAPI backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]==0.115.12",
    "uvicorn[standard]==0.34.0",
    "python-multipart==0.0.20",
    "httpx==0.28.1",
    "openai==1.68.2",
    "pydantic-settings==2.8.1",
]
